[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/UI/dialoguebox copy.png" type="Texture" id=1]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://drawncutscenes/garden1.gd" type="Script" id=3]
[ext_resource path="res://drawncutscenes/Untitled100_20210809161723.PNG" type="Texture" id=4]
[ext_resource path="res://drawncutscenes/Untitled100_20210809161515.PNG" type="Texture" id=5]
[ext_resource path="res://sounds/458587__inspectorj__ui-mechanical-text-scroll-03-fx-01-loop-[AudioTrimmer.com].wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/garden.wav" type="AudioStream" id=7]
[ext_resource path="res://sprites/UI/continuesprite copy.png" type="Texture" id=8]
[ext_resource path="res://sounds/Forest-ambience.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1564.02, -0.25, 0, 0.25, 0, 1650, -0.25, 0, 0.25, 0, 1564.02, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[node name="Node2D" type="Node2D"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1933.5, 1101.78 )
scale = Vector2( 1.0027, 1.02839 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 2003.16, 1915.27 )
scale = Vector2( 1.50204, 0.972979 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
anchor_left = 16.7
anchor_top = 41.2
anchor_right = 82.775
anchor_bottom = 47.325
margin_left = 356.0
margin_top = 108.0
margin_right = -356.0
margin_bottom = 155.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
anchor_left = 16.7
anchor_top = 41.2
anchor_right = 82.775
anchor_bottom = 47.325
margin_left = 356.0
margin_top = 108.0
margin_right = -356.0
margin_bottom = 155.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.635294, 0.0862745, 0.0862745, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="Control"]
anchor_left = 16.7
anchor_top = 41.2
anchor_right = 82.775
anchor_bottom = 47.325
margin_left = 356.0
margin_top = 108.0
margin_right = -356.0
margin_bottom = 155.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.0392157, 0.298039, 0.0588235, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="Control"]
anchor_left = 16.7
anchor_top = 41.2
anchor_right = 82.775
anchor_bottom = 47.325
margin_left = 356.0
margin_top = 108.0
margin_right = -356.0
margin_bottom = 155.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.0666667, 0.145098, 0.392157, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Control"]

[node name="continuesprite" type="Sprite" parent="Control"]
position = Vector2( 1832.84, 1650 )
scale = Vector2( 1.77585, 2.43817 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 20.0
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
autoplay = true

[connection signal="tween_completed" from="Control/Tween" to="Control" method="_on_Tween_tween_completed"]
